2003-08-12 (Brad Fitzpatrick)
	* use TCP_CORK on Linux or TCP_PUSH on BSD
	* only use TCP_NODELAY when we don't have alternatives
	
2003-08-10
	* disable Nagel's Algorithm (TCP_NODELAY) for better performance (avva)

2003-08-10
	* support multiple levels of verbosity (-vv)

2003-08-10  (Evan Martin)
	* Makefile.am: debug, optimization, and static flags are controlled
	  by the configure script.
	* configure.ac:
	  - allow specifying libevent directory with --with-libevent=DIR
	  - check for malloc.h (unavailable on BSDs)
	  - check for socklen_t (unavailable on OSX)
	* assoc.c, items.c, slabs.c:  Remove some unused headers.
	* memcached.c:  allow for nonexistence of malloc.h; #define a POSIX
	  macro to import mlockall flags.

2003-07-29
	* version 1.1.7
	* big bug fix: item exptime 0 meant expire immediately, not never
	* version 1.1.8

2003-07-22
	* make 'delete' take second arg, of time to refuse new add/replace
	* set/add/replace/delete can all take abs or delta time (delta can't
	  be larger than a month)

2003-07-21
	* added doc/protocol.txt

2003-07-01
	* report CPU usage in stats
	 
2003-06-30
	* version 1.1.6
	* fix a number of obscure bugs
	* more stats reporting
	
2003-06-10
	* removing use of Judy; use a hash.  (judy caused memory fragmentation)
	* shrink some structures
	* security improvements
	* version 1.1.0
	
2003-06-18
	* changing maxsize back to an unsigned int
	
2003-06-16
	* adding PHP support
	* added CONTRIBUTORS file
	* version 1.0.4
	
2003-06-15
	* forgot to distribute website/api (still learning auto*)
	* version 1.0.3
	
2003-06-15
	* update to version 1.0.2
	* autoconf/automake fixes for older versions
	* make stats report version number
	* change license from GPL to BSD
	
Fri, 13 Jun 2003 10:05:51 -0700  Evan Martin  <martine@danga.com>

	* configure.ac, autogen.sh, Makefile.am:  Use autotools.
	* items.c, memcached.c:  #include <time.h> for time(),
	  printf time_t as %lu (is this correct?),
	  minor warnings fixes.
